2010-07-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int y-GROK] Use ‘exit_failurefully’ more.

	* yarrrr.c [TEST_GROK] (exiterr): Use ‘exit_failurefully’.

2010-07-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: exit_failurefully, exit_diff_trouble

	* rcsutil.c (exit_failurefully, exit_diff_trouble): New funcs.
	(runv): Use ‘exit_diff_trouble’.
	* base.h (exit_failurefully, exit_diff_trouble): New func decls.
	* ci.c (exiterr): Use ‘exit_failurefully’.
	* co.c (exiterr): Likewise.
	* ident.c (exiterr): Likewise.
	* rcs.c (exiterr): Likewise.
	* rcsclean.c (exiterr): Likewise.
	* rcsfnms.c (getcwd): Likewise.
	* rlog.c (exiterr): Likewise.
	* yarrrr.c (bow_out, scram): Likewise.
	* merge.c (exiterr): Use ‘exit_diff_trouble’.
	* rcsdiff.c (exiterr): Likewise.
	* rcsmerge.c (exiterr): Likewise.

2010-07-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Fix typo: Say "GPLv3+" in --version output.

	* gnu-h-v.c (COMMAND_VERSION): Say "GPLv3+".
	* rcsfreeze.sh (version): Likewise.

2010-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Update license to GPLv3+.

	* Makefile.am: Update license notice.
	* alive.test: Likewise.
	* b-anchor.c: Likewise.
	* b-complain.c: Likewise.
	* b-complain.h: Likewise.
	* b-divvy.c: Likewise.
	* b-divvy.h: Likewise.
	* b-esds.c: Likewise.
	* b-esds.h: Likewise.
	* b-excwho.c: Likewise.
	* b-excwho.h: Likewise.
	* b-fb.c: Likewise.
	* b-fb.h: Likewise.
	* b-feph.c: Likewise.
	* b-feph.h: Likewise.
	* b-fro.c: Likewise.
	* b-fro.h: Likewise.
	* b-grok.c: Likewise.
	* b-grok.h: Likewise.
	* b-isr.c: Likewise.
	* b-isr.h: Likewise.
	* b-kwxout.c: Likewise.
	* b-kwxout.h: Likewise.
	* base.h: Likewise.
	* ci.c: Likewise.
	* co.c: Likewise.
	* gnu-h-v.c: Likewise.
	* gnu-h-v.h: Likewise.
	* ident.c: Likewise.
	* maketime.c: Likewise.
	* maketime.h: Likewise.
	* merge.c: Likewise.
	* merger.c: Likewise.
	* partime.c: Likewise.
	* partime.h: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.